# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: audit-on-push.yaml  general.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
